[gd_scene load_steps=7 format=3 uid="uid://duhvdgfs8f523"]

[ext_resource type="Script" path="res://bpLog.gd" id="1_722o4"]
[ext_resource type="PackedScene" uid="uid://doq4x513ik654" path="res://mainLabel.tscn" id="1_cgats"]
[ext_resource type="PackedScene" uid="uid://dybyc6f65d64r" path="res://bp_input_card.tscn" id="2_6fg5b"]
[ext_resource type="PackedScene" uid="uid://co1djkx0newg" path="res://mainButton.tscn" id="4_je3ns"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gdiim"]
bg_color = Color(0.380392, 0.486275, 0.807843, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_q2njw"]
bg_color = Color(0.552941, 0, 0, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.0199025, 0.0135083, 0.00438237, 1)

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_722o4")

[node name="Base" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_gdiim")

[node name="marginBase" type="MarginContainer" parent="Base"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 70

[node name="mainRows" type="VBoxContainer" parent="Base/marginBase"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Label" parent="Base/marginBase/mainRows" instance=ExtResource("1_cgats")]
layout_mode = 2
text = "BLood Pressure Log"

[node name="BpInputCard" parent="Base/marginBase/mainRows" instance=ExtResource("2_6fg5b")]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="Base/marginBase/mainRows"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="VBoxContainer" type="VBoxContainer" parent="Base/marginBase/mainRows/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="homeBtn" parent="Base/marginBase/mainRows" instance=ExtResource("4_je3ns")]
layout_mode = 2
text = "Tracker-Page"

[node name="OptBtnRow" type="HBoxContainer" parent="Base/marginBase/mainRows"]
layout_mode = 2

[node name="ExportBtn" parent="Base/marginBase/mainRows/OptBtnRow" instance=ExtResource("4_je3ns")]
layout_mode = 2
size_flags_horizontal = 6
text = "Export"

[node name="ClearLogBtn" parent="Base/marginBase/mainRows/OptBtnRow" instance=ExtResource("4_je3ns")]
layout_mode = 2
size_flags_horizontal = 6
text = "Clear Log"

[node name="AcceptBtn" parent="Base/marginBase/mainRows/OptBtnRow" instance=ExtResource("4_je3ns")]
visible = false
layout_mode = 2
size_flags_horizontal = 10
theme_override_styles/normal = SubResource("StyleBoxFlat_q2njw")
text = "Yes"

[node name="CancelBtn" parent="Base/marginBase/mainRows/OptBtnRow" instance=ExtResource("4_je3ns")]
visible = false
layout_mode = 2
size_flags_horizontal = 10
text = "No"

[connection signal="pressed" from="Base/marginBase/mainRows/BpInputCard/SubmitBtn" to="." method="_on_submit_btn_pressed"]
[connection signal="pressed" from="Base/marginBase/mainRows/homeBtn" to="." method="_on_home_btn_pressed"]
[connection signal="pressed" from="Base/marginBase/mainRows/OptBtnRow/ExportBtn" to="." method="_on_export_btn_pressed"]
[connection signal="pressed" from="Base/marginBase/mainRows/OptBtnRow/ClearLogBtn" to="." method="_on_clear_log_btn_pressed"]
[connection signal="pressed" from="Base/marginBase/mainRows/OptBtnRow/AcceptBtn" to="." method="_on_accept_btn_pressed"]
[connection signal="pressed" from="Base/marginBase/mainRows/OptBtnRow/CancelBtn" to="." method="_on_cancel_btn_pressed"]

[editable path="Base/marginBase/mainRows/BpInputCard"]
